--- a/정답/insta_clone/style.css
+++ b/정답/insta_clone/style.css
@@ -25,6 +25,7 @@ body{
 margin: 0;
 padding: 0;
 box-sizing: border-box;
+/* border: 2px solid rebeccapurple; */
 }
 
 a{
@@ -56,6 +57,7 @@ button{
 .dark-logo{
   display: none;
 }
+
 body.dark .dark-logo{
   display: block;
 }
@@ -182,6 +184,7 @@ body.dark .light-logo{
     background-color: var(--box-border-color);
   }
 
+  /*.or-box div:nth-child(2)  */
   .or-box div:nth-child(even){
     color: var(--box-border-color);
     margin: 30px 16px;
@@ -229,7 +232,7 @@ body.dark .light-logo{
   }
 
   .txtap-txt{
-    margin: 30px 0px;
+    margin: 30px 0;
   }
 
   .qpp-down img{
@@ -246,7 +249,7 @@ body.dark .light-logo{
     display: flex;
     flex-wrap: wrap;
   }
-  
+
   .footer-menu-list a {
     padding: 0 8px;
     font-size: 14px;
