💄 가입하기 a코드 추가

--- a/정답/insta_clone/style.css
+++ b/정답/insta_clone/style.css
@@ -226,7 +226,7 @@ body.dark .light-logo{
 
   }
 
-  .join-box span{
+  .join-box span a{
     color: var(--light-blue);
     font-weight:700;
   }
